--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows64-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repo
@@ -211,7 +211,7 @@ jobs:
               Set-AuthenticodeSignature `
                   -FilePath "$fileToSign" `
                   -Certificate $cert ` # Use the certificate object we just generated
-                  -HashAlgorithm SHA256 ` # File digest algorithm
+                  # -HashAlgorithm SHA256 ` # File digest algorithm
                   -TimestampServer "$timestampServer" ` # Timestamp server URL
                   -ErrorAction Stop # Important: Stops the script on any signing error
 
@@ -249,175 +249,175 @@ jobs:
 
 
 
-      - name: Generate Self-Signed Certificate, Sign and Verify (Pure PowerShell)
-        id: generate-sign-verify-cz
-        shell: pwsh # Explicitně specifikujeme PowerShell
+      # - name: Generate Self-Signed Certificate, Sign and Verify (Pure PowerShell)
+      #   id: generate-sign-verify-cz
+      #   shell: pwsh # Explicitně specifikujeme PowerShell
 
-        run: |
+      #   run: |
 
-          # Důležité: Nastavení prostředí MSVC.
-          # To je stále potřeba, pokud by další kroky (mimo tento) používaly nástroje MSVC (např. cl.exe).
-          # Ujistěte se, že VC_VARS_PATH je správně nastavená z předchozího kroku přes GITHUB_ENV.
-          & "${{ env.VC_VARS_PATH }}" x64
+      #     # Důležité: Nastavení prostředí MSVC.
+      #     # To je stále potřeba, pokud by další kroky (mimo tento) používaly nástroje MSVC (např. cl.exe).
+      #     # Ujistěte se, že VC_VARS_PATH je správně nastavená z předchozího kroku přes GITHUB_ENV.
+      #     & "${{ env.VC_VARS_PATH }}" x64
 
-          # --- Nastavení proměnných ---
-          $certName = "MyTestSigningCert-$(Get-Date -Format 'yyyyMMdd-HHmmss')"
-          # Generujeme náhodné, bezpečné heslo pro PFX soubor
-          $pfxPassword = ConvertTo-SecureString -String (New-Guid).ToString() -AsPlainText -Force
-          $pfxPath = "$($env:TEMP)\$($certName).pfx"
-          $fileToSign = "main.exe" # Předpokládá se, že main.exe už existuje z kompilačního kroku
-          $timestampServer = "http://timestamp.digicert.com" # Server pro časové razítko
+      #     # --- Nastavení proměnných ---
+      #     $certName = "MyTestSigningCert-$(Get-Date -Format 'yyyyMMdd-HHmmss')"
+      #     # Generujeme náhodné, bezpečné heslo pro PFX soubor
+      #     $pfxPassword = ConvertTo-SecureString -String (New-Guid).ToString() -AsPlainText -Force
+      #     $pfxPath = "$($env:TEMP)\$($certName).pfx"
+      #     $fileToSign = "main.exe" # Předpokládá se, že main.exe už existuje z kompilačního kroku
+      #     $timestampServer = "http://timestamp.digicert.com" # Server pro časové razítko
 
-          Write-Host "--- Krok 1: Generování self-signed certifikátu ---"
-          Write-Host "Generuji self-signed certifikát: $certName"
-          # 1. Generujeme self-signed certifikát
-          $cert = New-SelfSignedCertificate `
-              -CertStoreLocation Cert:\CurrentUser\My `
-              -Type CodeSigning `
-              -Subject "CN=$certName" `
-              -KeyAlgorithm RSA `
-              -KeyLength 2048 `
-              -NotAfter (Get-Date).AddDays(7) `
-              -KeyUsage DigitalSignature `
-              -HashAlgorithm SHA256
+      #     Write-Host "--- Krok 1: Generování self-signed certifikátu ---"
+      #     Write-Host "Generuji self-signed certifikát: $certName"
+      #     # 1. Generujeme self-signed certifikát
+      #     $cert = New-SelfSignedCertificate `
+      #         -CertStoreLocation Cert:\CurrentUser\My `
+      #         -Type CodeSigning `
+      #         -Subject "CN=$certName" `
+      #         -KeyAlgorithm RSA `
+      #         -KeyLength 2048 `
+      #         -NotAfter (Get-Date).AddDays(7) `
+      #         -KeyUsage DigitalSignature `
+      #         -HashAlgorithm SHA256
 
-          Write-Host "Certifikát vygenerován s otiskem: $($cert.Thumbprint)"
+      #     Write-Host "Certifikát vygenerován s otiskem: $($cert.Thumbprint)"
 
-          Write-Host "--- Krok 2: Export certifikátu do PFX souboru ---"
-          # 2. Exportujeme certifikát s jeho privátním klíčem do PFX souboru
-          Export-PfxCertificate `
-              -Cert $cert `
-              -FilePath $pfxPath `
-              -Password $pfxPassword
+      #     Write-Host "--- Krok 2: Export certifikátu do PFX souboru ---"
+      #     # 2. Exportujeme certifikát s jeho privátním klíčem do PFX souboru
+      #     Export-PfxCertificate `
+      #         -Cert $cert `
+      #         -FilePath $pfxPath `
+      #         -Password $pfxPassword
 
-          Write-Host "PFX soubor exportován do: $pfxPath"
+      #     Write-Host "PFX soubor exportován do: $pfxPath"
 
-          Write-Host "--- Krok 3: Podepsání souboru pomocí Set-AuthenticodeSignature ---"
-          Write-Host "Podepisuji soubor '$fileToSign' pomocí Set-AuthenticodeSignature..."
-          try {
-              Set-AuthenticodeSignature `
-                  -FilePath "$fileToSign" `
-                  -Certificate $cert ` # Použijeme objekt certifikátu, který jsme právě vygenerovali
-                  -HashAlgorithm SHA256 ` # Algoritmus haše souboru
-                  -TimestampServer "$timestampServer" ` # Server pro časové razítko
-                  -ErrorAction Stop # Důležité: Zastaví skript při jakékoli chybě podpisu
+      #     Write-Host "--- Krok 3: Podepsání souboru pomocí Set-AuthenticodeSignature ---"
+      #     Write-Host "Podepisuji soubor '$fileToSign' pomocí Set-AuthenticodeSignature..."
+      #     try {
+      #         Set-AuthenticodeSignature `
+      #             -FilePath "$fileToSign" `
+      #             -Certificate $cert ` # Použijeme objekt certifikátu, který jsme právě vygenerovali
+      #             -HashAlgorithm SHA256 ` # Algoritmus haše souboru
+      #             -TimestampServer "$timestampServer" ` # Server pro časové razítko
+      #             -ErrorAction Stop # Důležité: Zastaví skript při jakékoli chybě podpisu
 
-              Write-Host "Soubor '$fileToSign' úspěšně podepsán pomocí Set-AuthenticodeSignature."
-          }
-          catch {
-              Write-Error "Set-AuthenticodeSignature selhal: $($_.Exception.Message)"
-              exit 1 # Ukončíme workflow při chybě
-          }
+      #         Write-Host "Soubor '$fileToSign' úspěšně podepsán pomocí Set-AuthenticodeSignature."
+      #     }
+      #     catch {
+      #         Write-Error "Set-AuthenticodeSignature selhal: $($_.Exception.Message)"
+      #         exit 1 # Ukončíme workflow při chybě
+      #     }
 
-          Write-Host "--- Krok 4: Ověření podpisu pomocí Get-AuthenticodeSignature ---"
-          Write-Host "Ověřuji podpis souboru '$fileToSign'..."
-          try {
-              $signature = Get-AuthenticodeSignature -FilePath "$fileToSign" -ErrorAction Stop
+      #     Write-Host "--- Krok 4: Ověření podpisu pomocí Get-AuthenticodeSignature ---"
+      #     Write-Host "Ověřuji podpis souboru '$fileToSign'..."
+      #     try {
+      #         $signature = Get-AuthenticodeSignature -FilePath "$fileToSign" -ErrorAction Stop
 
-              if ($signature.Status -eq 'Valid') {
-                  Write-Host "Podpis je platný. Podepsáno: $($signature.SignerCertificate.Subject)"
-              } else {
-                  Write-Error "Podpis je NEPLATNÝ. Stav: $($signature.Status) - Chyba: $($signature.StatusMessage)"
-                  exit 1 # Ukončíme workflow, pokud podpis není platný
-              }
-          }
-          catch {
-              Write-Error "Get-AuthenticodeSignature selhal při ověřování: $($_.Exception.Message)"
-              exit 1 # Ukončíme workflow při chybě ověřování
-          }
+      #         if ($signature.Status -eq 'Valid') {
+      #             Write-Host "Podpis je platný. Podepsáno: $($signature.SignerCertificate.Subject)"
+      #         } else {
+      #             Write-Error "Podpis je NEPLATNÝ. Stav: $($signature.Status) - Chyba: $($signature.StatusMessage)"
+      #             exit 1 # Ukončíme workflow, pokud podpis není platný
+      #         }
+      #     }
+      #     catch {
+      #         Write-Error "Get-AuthenticodeSignature selhal při ověřování: $($_.Exception.Message)"
+      #         exit 1 # Ukončíme workflow při chybě ověřování
+      #     }
 
-          Write-Host "--- Krok 5: Úklid ---"
-          Write-Host "Uklízím vygenerovaný certifikát a PFX soubor..."
-          Remove-Item $pfxPath -Force
-          # Odebereme certifikát z úložiště, včetně privátního klíče
-          Remove-Item "Cert:\CurrentUser\My\$($cert.Thumbprint)" -DeleteKey -Force
+      #     Write-Host "--- Krok 5: Úklid ---"
+      #     Write-Host "Uklízím vygenerovaný certifikát a PFX soubor..."
+      #     Remove-Item $pfxPath -Force
+      #     # Odebereme certifikát z úložiště, včetně privátního klíče
+      #     Remove-Item "Cert:\CurrentUser\My\$($cert.Thumbprint)" -DeleteKey -Force
 
-          Write-Host "Všechny operace dokončeny úspěšně."
-
-
+      #     Write-Host "Všechny operace dokončeny úspěšně."
 
 
-      - name: Generate Self-Signed Certificate and Sign OLD
-        id: generate-sign-verify-old
-        shell: pwsh # Explicitly specify PowerShell
-
-        run: |
-
-          # Setup paths
-          & "${{ env.VC_VARS_PATH }}" x64
 
 
-          $certName = "MyTestSigningCert-$(Get-Date -Format 'yyyyMMdd-HHmmss')"
-          # Generate a random, secure password for the PFX file
-          $pfxPassword = ConvertTo-SecureString -String (New-Guid).ToString() -AsPlainText -Force
-          $pfxPath = "$($env:TEMP)\$($certName).pfx"
-          $fileToSign = "main.exe"
+      # - name: Generate Self-Signed Certificate and Sign OLD
+      #   id: generate-sign-verify-old
+      #   shell: pwsh # Explicitly specify PowerShell
 
-          Write-Host "Generating self-signed certificate: $certName"
-          # 1. Generate the self-signed certificate
-          # -CertStoreLocation Cert:\CurrentUser\My : Stores the certificate in the current user's certificate store
-          # -Type CodeSigning : Specifies the certificate's purpose as code signing
-          # -Subject "CN=$certName" : Sets the common name of the certificate
-          # -KeyAlgorithm RSA -KeyLength 2048 : Sets key parameters
-          # -NotAfter (Get-Date).AddDays(7) : Certificate valid for 7 days (sufficient for testing)
-          # -KeyUsage DigitalSignature : Key usage for digital signatures
-          # -HashAlgorithm SHA256 : Hashing algorithm for the signature
-          $cert = New-SelfSignedCertificate `
-              -CertStoreLocation Cert:\CurrentUser\My `
-              -Type CodeSigning `
-              -Subject "CN=$certName" `
-              -KeyAlgorithm RSA `
-              -KeyLength 2048 `
-              -NotAfter (Get-Date).AddDays(7) `
-              -KeyUsage DigitalSignature `
-              -HashAlgorithm SHA256
+      #   run: |
 
-          Write-Host "Certificate generated with thumbprint: $($cert.Thumbprint)"
+      #     # Setup paths
+      #     & "${{ env.VC_VARS_PATH }}" x64
 
-          # 2. Export the certificate with its private key to a PFX file
-          # -FilePath $pfxPath : Path for the PFX file
-          # -Password $pfxPassword : Password for the PFX file
-          Export-PfxCertificate `
-              -Cert $cert `
-              -FilePath $pfxPath `
-              -Password $pfxPassword
 
-          Write-Host "PFX file exported to: $pfxPath"
+      #     $certName = "MyTestSigningCert-$(Get-Date -Format 'yyyyMMdd-HHmmss')"
+      #     # Generate a random, secure password for the PFX file
+      #     $pfxPassword = ConvertTo-SecureString -String (New-Guid).ToString() -AsPlainText -Force
+      #     $pfxPath = "$($env:TEMP)\$($certName).pfx"
+      #     $fileToSign = "main.exe"
 
-          # 3. Sign the file using SignTool.exe
-          # SignTool.exe is part of the Windows SDK, pre-installed on Windows runners
-          # /f $pfxPath : Path to the PFX file
-          # /p $pfxPassword.ToString() : Password for the PFX file
-          # /fd sha256 : File digest algorithm
-          # /td sha256 : Timestamp digest algorithm
-          # /tr http://timestamp.digicert.com : Timestamp server URL (crucial for signature validity after certificate expiration)
-          signtool sign `
-              /f "$pfxPath" `
-              /p "$($pfxPassword.ToString())" `
-              /fd sha256 `
-              /td sha256 `
-              /tr http://timestamp.digicert.com `
-              "$fileToSign"
+      #     Write-Host "Generating self-signed certificate: $certName"
+      #     # 1. Generate the self-signed certificate
+      #     # -CertStoreLocation Cert:\CurrentUser\My : Stores the certificate in the current user's certificate store
+      #     # -Type CodeSigning : Specifies the certificate's purpose as code signing
+      #     # -Subject "CN=$certName" : Sets the common name of the certificate
+      #     # -KeyAlgorithm RSA -KeyLength 2048 : Sets key parameters
+      #     # -NotAfter (Get-Date).AddDays(7) : Certificate valid for 7 days (sufficient for testing)
+      #     # -KeyUsage DigitalSignature : Key usage for digital signatures
+      #     # -HashAlgorithm SHA256 : Hashing algorithm for the signature
+      #     $cert = New-SelfSignedCertificate `
+      #         -CertStoreLocation Cert:\CurrentUser\My `
+      #         -Type CodeSigning `
+      #         -Subject "CN=$certName" `
+      #         -KeyAlgorithm RSA `
+      #         -KeyLength 2048 `
+      #         -NotAfter (Get-Date).AddDays(7) `
+      #         -KeyUsage DigitalSignature `
+      #         -HashAlgorithm SHA256
 
-          if ($LastExitCode -ne 0) {
-              Write-Error "SignTool failed with exit code $LastExitCode"
-              exit $LastExitCode
-          }
-          Write-Host "File '$fileToSign' signed successfully."
+      #     Write-Host "Certificate generated with thumbprint: $($cert.Thumbprint)"
 
-          # 4. (Optional) Verify the signature
-          Write-Host "Verifying signature..."
-          signtool.exe verify /pa "$fileToSign"
-          if ($LastExitCode -ne 0) {
-              Write-Error "Signature verification failed with exit code $LastExitCode"
-              exit $LastExitCode
-          }
-          Write-Host "Signature verified successfully."
+      #     # 2. Export the certificate with its private key to a PFX file
+      #     # -FilePath $pfxPath : Path for the PFX file
+      #     # -Password $pfxPassword : Password for the PFX file
+      #     Export-PfxCertificate `
+      #         -Cert $cert `
+      #         -FilePath $pfxPath `
+      #         -Password $pfxPassword
 
-          # 5. Cleanup: Remove the certificate from the store and delete the PFX file
-          Write-Host "Cleaning up generated certificate and PFX file..."
-          Remove-Item $pfxPath -Force
-          Remove-Item "Cert:\CurrentUser\My\$($cert.Thumbprint)" -DeleteKey -Force
+      #     Write-Host "PFX file exported to: $pfxPath"
+
+      #     # 3. Sign the file using SignTool.exe
+      #     # SignTool.exe is part of the Windows SDK, pre-installed on Windows runners
+      #     # /f $pfxPath : Path to the PFX file
+      #     # /p $pfxPassword.ToString() : Password for the PFX file
+      #     # /fd sha256 : File digest algorithm
+      #     # /td sha256 : Timestamp digest algorithm
+      #     # /tr http://timestamp.digicert.com : Timestamp server URL (crucial for signature validity after certificate expiration)
+      #     signtool sign `
+      #         /f "$pfxPath" `
+      #         /p "$($pfxPassword.ToString())" `
+      #         /fd sha256 `
+      #         /td sha256 `
+      #         /tr http://timestamp.digicert.com `
+      #         "$fileToSign"
+
+      #     if ($LastExitCode -ne 0) {
+      #         Write-Error "SignTool failed with exit code $LastExitCode"
+      #         exit $LastExitCode
+      #     }
+      #     Write-Host "File '$fileToSign' signed successfully."
+
+      #     # 4. (Optional) Verify the signature
+      #     Write-Host "Verifying signature..."
+      #     signtool.exe verify /pa "$fileToSign"
+      #     if ($LastExitCode -ne 0) {
+      #         Write-Error "Signature verification failed with exit code $LastExitCode"
+      #         exit $LastExitCode
+      #     }
+      #     Write-Host "Signature verified successfully."
+
+      #     # 5. Cleanup: Remove the certificate from the store and delete the PFX file
+      #     Write-Host "Cleaning up generated certificate and PFX file..."
+      #     Remove-Item $pfxPath -Force
+      #     Remove-Item "Cert:\CurrentUser\My\$($cert.Thumbprint)" -DeleteKey -Force
 
 
       # - name: Verify that the signed file exists (optional)
